--- a/style.css
+++ b/style.css
@@ -117,3 +117,19 @@ nav {
 .lang-menu ul li a:hover {
     background-color: #f2f2f2;
 }
+
+.navbar ul {
+    flex: 1;
+    text-align: center;
+}
+
+.navbar ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 20px;
+}
+
+.navbar ul a{
+    text-decoration: none;
+    color: #fff;
+}
