--- a/style.css
+++ b/style.css
@@ -1,30 +1,71 @@
 @import url(https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap);
 
+::-webkit-scrollbar {
+    width: 16px;
+}
+::-webkit-scrollbar-track {
+    background: rgb(4, 0, 20);
+    border-radius: 8px;
+    margin: 2px;
+}
+::-webkit-scrollbar-thumb {
+    background: rgb(48, 32, 64);
+    border: 3px, solid rgb(12, 0, 28);
+    width: 8px;
+    border-radius: 8px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(64, 48, 80);
+}
+
 * {
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
     font-size: 24px;
     box-sizing: border-box;
+    color: white;
 }
 
 html, body {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     margin: 0;
-    background-color: rgb(16, 0, 32);
-    color: #fff;
-    min-height: 100vh;
-    position: relative;
+    padding: 0;
 }
 
-nav {
+html {
+    background-color: blue;
+    border: 10px solid red;
+}
+
+body {
+    background-image: linear-gradient(rgb(16, 0, 32), black);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    position: relative;
+    border: 10px solid green;
+}
+
+
+header {
     background-color: rgb(8, 0, 24);
-    margin: 0 auto;
+    margin: 8px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 10px;
+    border-radius: 32px;
+}
+
+footer {
+    background-color: rgb(8, 0, 24);
+    margin: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 10px;
+    border-radius: 32px;
 }
 
 .logo {
@@ -84,7 +125,6 @@ nav {
     padding: 5px 10px;
     display: block;
     text-decoration: none;
-    color: #fff;
 }
 
 .lang-menu ul li a:before {
@@ -130,7 +170,6 @@ nav {
 
 .navbar ul a {
     text-decoration: none;
-    color: #fff;
 }
 
 .paragraph {
@@ -140,11 +179,9 @@ nav {
 }
 .paragraph p {
     font-size: 20px;
-    color: white;
 }
 .paragraph p em {
     font-size: 20px;
-    color: white;
     font-style: normal;
     font-weight: bold;
 }
@@ -157,4 +194,69 @@ nav {
 .paragraph p a {
     font-size: 16px;
     color: lightgray;
+}
+
+.introduction {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    margin: auto;
+    height: 80vh;
+    width: 80%;
+    border: 3px solid green;
+    gap: 32px;
+    padding: 32px 32px;
+}
+
+.introduction img {
+    width: 288px;
+    height: auto;
+    align-self: center;
+}
+
+.text {
+    display: flex;
+    justify-content: flex-start;
+    font-size: 48px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
+}
+
+.text p {
+    font-size: 24px;
+}
+
+.text a {
+    display: flex;
+    font-size: 24px;
+    background: white;
+    border-radius: 16px;
+    color: rgb(16, 0, 32);
+    width: fit-content;
+    height: fit-content;
+    padding: 10px 10px;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+.text-container {
+    position: relative;
+    top: 20vh;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    height: 80vh;
+    width: 100%;
+    border: 3px solid red;
+    gap: 32px;
+    padding: 32px 32px;
+}
+
+.text-container img {
+    height: 100%;
+    width: auto;
+    align-self: center;
+    border-radius: 32px;
 }
