--- a/style.css
+++ b/style.css
@@ -35,36 +35,59 @@ html, body {
 }
 
 html {
-    background-color: blue;
-    border: 10px solid red;
+    background: rgb(16, 0, 32);
+    /*border: 10px solid red;*/
 }
 
 body {
-    background-image: linear-gradient(rgb(16, 0, 32), black);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    position: relative;
-    border: 10px solid green;
+    background: rgb(16, 0, 32);
+    display: flex;
+    flex-direction: column;
+    /*border: 10px solid green;*/
 }
 
-
-header {
-    background-color: rgb(8, 0, 24);
-    margin: 8px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 10px;
-    border-radius: 32px;
+main {
+    min-height: calc(100vh - 100px);
 }
 
 footer {
+    height: 100px;
+    background-color: rgb(8, 0, 24);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 10px;
+    border-radius: 32px;
+    font-size: 24px;
+}
+
+footer span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+}
+
+footer span a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    text-decoration: none;
+}
+
+footer img {
+    width: 32px;
+    height: 32px;
+}
+
+nav {
     background-color: rgb(8, 0, 24);
     margin: 8px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 10px;
+    padding: 10px;
     border-radius: 32px;
 }
 
@@ -100,7 +123,7 @@ footer {
 .lang-menu ul {
     margin: 0;
     padding: 0;
-    background-color: rgb(16, 0, 32);
+    background-color: rgb(32, 0, 48);
     border: 1px solid #fff;
     border-radius: 4px;
     box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.5);
