--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ nav {
     margin: auto;
     height: 80vh;
     width: 80%;
-    border: 3px solid green;
+    /* border: 3px solid green; */
     gap: 32px;
     padding: 32px 32px;
 }
@@ -270,7 +270,7 @@ nav {
     justify-content: space-between;
     height: 100vh;
     width: 100%;
-    border: 3px solid red;
+    /* border: 3px solid red; */
     gap: 32px;
     padding: 32px 32px;
 }
@@ -303,7 +303,7 @@ nav {
     gap: 20px;
     height: calc(90vh - 200px);
     width: 100%;
-    border: 3px solid red;
+    /* border: 3px solid red; */
     padding: 32px 32px;
     font-size: 48px;
     font-weight: 600;
