--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
     font-family: 'Montserrat', sans-serif;
     font-size: 24px;
     box-sizing: border-box;
-    color: white;
+    color: #f0f0f0;
 }
 
 html, body {
@@ -32,6 +32,7 @@ html, body {
     min-height: 100%;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 html {
@@ -124,7 +125,7 @@ nav {
     margin: 0;
     padding: 0;
     background-color: rgb(32, 0, 48);
-    border: 1px solid #fff;
+    border: 1px solid #f0f0f0;
     border-radius: 4px;
     box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.5);
     display: none;
@@ -177,7 +178,7 @@ nav {
 }
 
 .lang-menu ul li a:hover {
-    background-color: #f2f2f2;
+    background-color: #f0f0f0;
 }
 
 .navbar ul {
@@ -195,27 +196,94 @@ nav {
     text-decoration: none;
 }
 
-.paragraph {
-    display: flex;
-    margin: 0;
-    padding: 10px 20px;
+.history-container {
+    display: block;
+    height: auto;
+    width: 100%;
+    margin-top: 10px;
 }
-.paragraph p {
-    font-size: 20px;
+
+.history-container p {
+    font-size: 36px;
 }
-.paragraph p em {
-    font-size: 20px;
+.history-container p em {
+    font-size: 36px;
     font-style: normal;
-    font-weight: bold;
+    font-weight: bolder;
 }
-.paragraph p i {
-    font-size: 20px;
+.history-container p i {
+    font-size: 36px;
     color: turquoise;
     font-style: normal;
+    font-weight: bolder;
+}
+
+.history-1 {
+    background-image: url(res/history/persia_bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    padding: 20px 20px;
+    align-content: center;
+}
+
+.history-1 * {
+    color: rgb(16, 0, 32);
     font-weight: bold;
 }
-.paragraph p a {
-    font-size: 16px;
+
+.history-2 {
+    background-image: url(res/history/china_bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    padding: 20px 20px;
+    align-content: center;
+}
+
+.history-2 * {
+    color: rgb(16, 0, 32);
+    font-weight: bold;
+}
+
+.history-3 {
+    background-image: url(res/history/europe_bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    padding: 20px 20px;
+    align-content: center;
+}
+
+.history-3 * {
+    color: rgb(16, 0, 32);
+    font-weight: bold;
+}
+
+.history-4 {
+    background-image: url(res/history/pascal_bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    padding: 20px 20px;
+    align-content: center;
+}
+
+.history-4 * {
+    color: #f0f0f0;
+    font-weight: bold;
+}
+
+.reference {
+    margin: 20px;
+}
+
+.reference a {
+    font-size: 20px;
     color: lightgray;
 }
 
@@ -254,7 +322,7 @@ nav {
 .text a {
     display: flex;
     font-size: 24px;
-    background: white;
+    background: #f0f0f0;
     border-radius: 16px;
     color: rgb(16, 0, 32);
     width: fit-content;
@@ -276,14 +344,14 @@ nav {
 }
 
 .text-container.history img {
-    height: 100%;
+    height: 80%;
     width: auto;
     align-self: center;
     border-radius: 32px;
 }
 
 .text-container.modelling img {
-    height: 100%;
+    height: 60%;
     width: auto;
     align-self: center;
     border-radius: 32px;
